# claude-toolkit

./: .gitignore  .mcp.json  BACKLOG.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  VERSION  install.sh  pyproject.toml
.claude/: AGENTS.md  HOOKS.md  MANIFEST  MEMORIES.md  SKILLS.md  claude-powerline.json  curated-resources.md  evaluations.json  settings.grouped.README.md  settings.grouped.json.example  settings.json
cli/: CLAUDE.md  publish.py
design/: hook-framework-refactor.md  hooks-implementation-review.md
docs/: 2026-01-25-claude-sync-design.md  curated-resources.md  getting-started.md  naming-conventions.md  official-references.md
scripts/: analyze-usage.sh  backlog-query.sh  backup-transcripts.sh  index-sessions.sh  insights.py  lesson_db.py  publish.py  session-search.py  session_analytics.py  session_db.py  session_index.py  session_search.py  validate-all.sh  validate-indexes.sh  validate-resources-indexed.sh  validate-settings-template.sh  verify-resource-deps.sh
suggestions-box/: CLAUDE.md
tests/: CLAUDE.md  perf-detection-registry.sh  perf-session-start.sh  perf-surface-lessons.sh  run-all.sh  run-hook-tests.sh  test-backlog-query.sh  test-check-runner.sh  test-cli.sh  test-docs-query.sh  test-evaluation-query.sh  test-hook-utils-smoketest-flag.sh  test-hooks.sh  test-parse-hook-headers.sh  test-profile-lib.sh  test-raiz-changelog.sh  test-raiz-publish.sh  test-render-hooks-index.sh  test-setup-toolkit-diagnose.sh  test-skill-triggers.sh  test-sync-then-validate.sh  test-validate-detection-registry.sh  test-validate-hook-headers.sh  test-validate-hook-utils.sh  test-validate-json-fixtures.sh  test-validate-resources-indexed.sh  test-validate-safe-commands-sync.sh  test-validate-session-start-cap.sh  test_insights.py  (+8 more)
(+505 files in other folders)
